  and also converting default values. The Attribute class has moved to the
  batou component module.

- Yield nonzero returncode on remote exceptions.

- Add convenience converter for attributes "list" to handle comma separated
  lists of strings.

- Force safety of Nagios service description field: prohibit "," as its not
  safe for Nagios business processes.

1.0b23 (2014-06-30)
===================

- Allow unzip to overwrite existing files if the archive has newer copies.


1.0b22 (2014-06-30)
===================

- Fix uncaught import-error on mysql module.


1.0b21 (2014-06-30)
===================

- Fix bug in bundle shipping that made batou depend on the locale (#13465).

- Add MySQL components.

- Introduce batou.utils.Attribute() to avoid imperative type conversions in
  configure().

1.0b20 (2014-05-13)
===================

- Start using python-requests for HTTP/S downloads to support authentication
  (and other goodies).

- Improve error logging.


1.0b19 (2014-04-07)
===================

- Allow specifying alternate find-links in requirements.txt

- Remove remnants of the buildout component's ``extends`` option.



1.0b18 (2014-03-31)
===================

- Introduce environment option ``connect_method``, either 'ssh+sudo' (default)
  or plain 'ssh'.

- Improve update code: existing installations would not update cleanly to a new
  version due to wrong use of pkg_resources API.
  Existing installations need to be cleaned manually. :/

- Archive: recognize ``.tar.xz`` files and extract them with ``tar``.

- Fix bug in CMMI verify that would always raise UpdateNeeded due to a path
  mismatch (#13145).

- Component.cmd() now performs expand() on the given command by
  default. Saves typing:

    self.cmd('rm -rf {{component.workdir}}')

  instead of

    self.cmd(self.expand('rm -rf {{component.workdir}}'))

- File component: apply character encoding when reading and writing files.
  (#13165)
